# engine-rattle-splitter

./: .actup.toml  .dprint.jsonc  .gitignore  AGENTS.md  README.md  Shitty motor (goede recording).m4a  analyze.py  index.html  inspect_audio.py  main.py  plan.md  pyproject.toml  separate.py
.github/workflows/: pages.yml
engine_sound_splitter/: __init__.py  analysis.py  audio_io.py  filters.py  pipeline.py  spectrogram.py
src/engine_rattle_splitter/: __init__.py  __main__.py  audio_io.py  cli.py  moments.py  pipeline.py  site_builder.py  spectrogram.py
web/: index.html  site.css  site.json
