[project]
name            = "engine-rattle-splitter"
version         = "0.1.0"
description     = "Split motorcycle engine recordings into combustion drone and mechanical rattle stems"
readme          = "README.md"
requires-python = ">=3.14"
dependencies    = ["matplotlib>=3.10.9", "numpy>=2.4.6", "scipy>=1.17.1"]

[project.scripts]
engine-rattle-splitter = "engine_rattle_splitter.cli:main"

[dependency-groups]
dev = ["basedpyright>=1.39.6", "ruff>=0.15.14", "scipy-stubs>=1.17.1.5", "ty>=0.0.39"]

[build-system]
requires      = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath         = "."
venv             = ".venv"
typeCheckingMode = "standard"
